Fix mobile bars overlap

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,9 @@
   font-size: 1.25rem;
   font-size: clamp(1.25rem, 1.15rem + 0.5vw, 1.75rem);
 }
+
+html {
+  min-height: 100%;
+  height: 100%;
+  height: -webkit-fill-available;
+}
